Fixes styling and layout issues for language switcher. Shows user drop down for all users.

--- a/kolibri/core/assets/src/styles/main.styl
+++ b/kolibri/core/assets/src/styles/main.styl
@@ -28,9 +28,8 @@ html
   // https://davidwalsh.name/html5-boilerplate
   font-size: 100%
   text-size-adjust: 100%
-  overflow: hidden
   box-sizing: border-box
-
+  overflow-y: scroll
   // from normalize v5
   line-height: 1.15
 
